--- a/layouts/partials/widgets/people.html
+++ b/layouts/partials/widgets/people.html
@@ -40,7 +40,7 @@
     <div class="portrait-title">
       <h2>{{with $link}}<a href="{{.}}">{{end}}{{ .Params.name }}{{if $link}}</a>{{end}}</h2>
       {{ with .Params.role }}<h3>{{ . | markdownify | emojify }}</h3>{{ end }}
-      {{ with .Params.hold }}<h3>{{ . | markdownify | emojify }}</h3>{{ end }}
+      {{ with .Params.hold }}<h3>{{ . }}</h3>{{ end }}
       {{ with .Params.tlf }}<h3>Tlf.: {{ . | markdownify | emojify }}</h3>{{ end }}
       {{ with .Params.email }}<h3>{{ . | markdownify | emojify }}</h3>{{ end }}
     </div>
