Fix tilmeld teams

--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -55,9 +55,13 @@
         </li>
         {{ end }}
       </ul>
-
+      
+    </div>
+    <div class="col-12" style="text-align:center">
+      <a href="https://ik1919.sport24team.dk/">Bestil IK1919 klubtøj her</a>
     </div>
   </div>
+  
   <div class="col-12 col-lg-8" itemprop="description">
 
     {{/* Only display widget title in explicit instances of about widget, not in author pages. */}}
