Add coaches and documents

--- a/layouts/partials/widgets/sponsors.html
+++ b/layouts/partials/widgets/sponsors.html
@@ -14,7 +14,7 @@
         <img src="img/sponsorer/Antonsens Gulvmontering.png" title="Antonsens Gulvmontering">
     </a>
     <a href="https://dmbolig.dk/" style="margin: 1em; width: 200px" target="_blank" >
-        <h2 style="width: 200px; text-align:center;">Din Mægler</h2>
+        <img src="img/sponsorer/dinmaegler.png" title="Din Mægler">
     </a>
     <a href="https://klitgaardure.dk/" style="margin: 1em; width: 200px" target="_blank" >
         <img src="img/sponsorer/Klitgaard Ure.png" title="Klitgård Ure">
