Change payment links

--- a/layouts/partials/widgets/payment.html
+++ b/layouts/partials/widgets/payment.html
@@ -17,15 +17,16 @@
     
     <select class="form-control col-lg-3" id ="kontigent-link" onchange="enable_tilmeld_btn()">
       <option disabled selected value="">Vælg hold...</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=520445&skjul_nyt_medlem=0&skjul_allerede_medlem=0">1. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=520446&skjul_nyt_medlem=0&skjul_allerede_medlem=0">1. hold herrer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=520459&skjul_nyt_medlem=0&skjul_allerede_medlem=0">2. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=520460&skjul_nyt_medlem=0&skjul_allerede_medlem=0">2. hold herrer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=520461&skjul_nyt_medlem=0&skjul_allerede_medlem=0">3. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=520467&skjul_nyt_medlem=0&skjul_allerede_medlem=0">4. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=520464&skjul_nyt_medlem=0&skjul_allerede_medlem=0">5. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=520465&skjul_nyt_medlem=0&skjul_allerede_medlem=0">6. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=520463&skjul_nyt_medlem=0&skjul_allerede_medlem=0">7. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631959&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">1. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631960&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">1. hold herrer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631961&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">2. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631962&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">2. hold herrer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631963&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">3. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631964&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">3. hold herrer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631965&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">4. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631967&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">5. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631968&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">6. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631969&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">7. hold damer</option>
       <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=360643&skjul_nyt_medlem=0&skjul_allerede_medlem=0">Kvart kontigent (KUN efter aftale med bestyrelsen)</option>
     </select>
     <input class="btn btn-primary col-lg-2" type="button" id="tilmeld_btn" name="SUBMITBUTTON" onclick="got_to_payment()" value="Tilmeld" style="margin-left: 1em" disabled />
