Update trænere + add passiv medlem

--- a/layouts/partials/widgets/payment.html
+++ b/layouts/partials/widgets/payment.html
@@ -28,6 +28,7 @@
       <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631968&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">6. hold damer</option>
       <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631969&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">7. hold damer</option>
       <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=360643&skjul_nyt_medlem=0&skjul_allerede_medlem=0">Kvart kontigent (KUN efter aftale med bestyrelsen)</option>
+      <option value="http://conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=624256&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">Passiv medlem</option>
     </select>
     <input class="btn btn-primary col-lg-2" type="button" id="tilmeld_btn" name="SUBMITBUTTON" onclick="got_to_payment()" value="Tilmeld" style="margin-left: 1em" disabled />
 </div>
