update payment links

--- a/layouts/partials/widgets/payment.html
+++ b/layouts/partials/widgets/payment.html
@@ -17,17 +17,17 @@
     
     <select class="form-control col-lg-3" id ="kontigent-link" onchange="enable_tilmeld_btn()">
       <option disabled selected value="">Vælg hold...</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631959&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">1. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631960&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">1. hold herrer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631961&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">2. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631962&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">2. hold herrer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631963&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">3. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631964&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">3. hold herrer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631965&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">4. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631967&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">5. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631968&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">6. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=631969&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">7. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=360643&skjul_nyt_medlem=0&skjul_allerede_medlem=0">Kvart kontigent (KUN efter aftale med bestyrelsen)</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747734&skjul_nyt_medlem=&skjul_allerede_medlem=">1. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747735&skjul_nyt_medlem=&skjul_allerede_medlem=">1. hold herrer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747736&skjul_nyt_medlem=&skjul_allerede_medlem=">2. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747739&skjul_nyt_medlem=&skjul_allerede_medlem=">2. hold herrer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747740&skjul_nyt_medlem=&skjul_allerede_medlem=">3. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747741&skjul_nyt_medlem=&skjul_allerede_medlem=">3. hold herrer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747745&skjul_nyt_medlem=&skjul_allerede_medlem=">4. hold damer (Konerne)</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747746&skjul_nyt_medlem=&skjul_allerede_medlem=">5. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747747&skjul_nyt_medlem=&skjul_allerede_medlem=">6. hold damer</option>
+      <!-- <option value="">7. hold damer</option> -->
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747749&skjul_nyt_medlem=&skjul_allerede_medlem=">Kvart kontigent (KUN efter aftale med bestyrelsen)</option>
       <option value="http://conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=624256&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">Passiv medlem</option>
     </select>
     <input class="btn btn-primary col-lg-2" type="button" id="tilmeld_btn" name="SUBMITBUTTON" onclick="got_to_payment()" value="Tilmeld" style="margin-left: 1em" disabled />
