--- a/layouts/partials/widgets/payment.html
+++ b/layouts/partials/widgets/payment.html
@@ -17,15 +17,15 @@
     
     <select class="form-control col-lg-3" id ="kontigent-link" onchange="enable_tilmeld_btn()">
       <option disabled selected value="">Vælg hold...</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747734&skjul_nyt_medlem=&skjul_allerede_medlem=">1. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747735&skjul_nyt_medlem=&skjul_allerede_medlem=">1. hold herrer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747736&skjul_nyt_medlem=&skjul_allerede_medlem=">2. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747739&skjul_nyt_medlem=&skjul_allerede_medlem=">2. hold herrer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747740&skjul_nyt_medlem=&skjul_allerede_medlem=">3. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747741&skjul_nyt_medlem=&skjul_allerede_medlem=">3. hold herrer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747745&skjul_nyt_medlem=&skjul_allerede_medlem=">4. hold damer (Konerne)</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747746&skjul_nyt_medlem=&skjul_allerede_medlem=">5. hold damer</option>
-      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747747&skjul_nyt_medlem=&skjul_allerede_medlem=">6. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=764533&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">1. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=764534&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">1. hold herrer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=764535&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">2. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=764536&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">2. hold herrer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=764537&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">3. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=764538&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">3. hold herrer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=764539&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">4. hold damer (Konerne)</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=764540&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">5. hold damer</option>
+      <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=764541&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">6. hold damer</option>
       <!-- <option value="">7. hold damer</option> -->
       <option value="https://www.conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=747749&skjul_nyt_medlem=&skjul_allerede_medlem=">Kvart kontigent (KUN efter aftale med bestyrelsen)</option>
       <option value="http://conventus.dk/dataudv/www/new_tilmelding.php?foreningsid=10339&gruppe=624256&skjul_nyt_medlem=0&skjul_allerede_medlem=0&sprog=da">Passiv medlem</option>
