sponsors, trænere og tøj kob

--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -58,7 +58,7 @@
       
     </div>
     <div class="col-12" style="text-align:center">
-      <a href="https://ik1919.sport24team.dk/">Bestil IK1919 klubtøj her</a>
+      <a href="http://ik1919.sport24team.dk/login/c4c85a4f-62a9be3d"><span>Bestil IK1919 klubtøj her</span><img src="img/sponsorer/Sport24.png" alt="Sport 24 logo" style="height: 64px;"></a>
     </div>
   </div>
   
