--- a/layouts/partials/widgets/sponsors.html
+++ b/layouts/partials/widgets/sponsors.html
@@ -1,22 +1,8 @@
 
 <div class="row" style="width:100%; justify-content: center; align-items: center">
-    <a href="https://www.nordjyskebank.dk/" style="margin: 1em; width: 800px" target="_blank" ><img src="img/sponsorer/NordjyskeBank.png" title="Nordjyske Bank"></a>
-    <a style="margin: 1em; width: 420px" ><img src="img/sponsorer/godt-byg.png" title="Godt Byg"></a>
-    <a href="http://www.duppenbingo.dk/" style="margin: 1em; width: 420px" target="_blank" ><img src="img/sponsorer/Duppen-logo.png" title="Duppen Bingo"></a>
-    <a href="https://www.elsalgaalborg.dk/" style="margin: 1em; width: 200px" target="_blank" ><img src="img/sponsorer/Elsalg Aalborg.png" title="Elsalg Aalborg"></a>
-    <a href="https://multibyg.dk/" style="margin: 1em; width: 200px" target="_blank" ><img src="img/sponsorer/Multi-byg Logo.jpg" title="Multi-byg"></a>
-    <a href="https://www.boligadm.dk" style="margin: 1em; width: 200px" target="_blank" ><img src="img/sponsorer/Aalborg boligadministration Aps Logo.png" title=""></a>
-    <a href="https://oldirishpub.dk" style="margin: 1em; width: 200px" target="_blank" ><img src="img/sponsorer/OIP-Logo.png" title=""></a>
-    <a style="margin: 1em; width: 200px" ><img src="img/sponsorer/Carsoe.png" title="Carsøe"></a>
-    <a href="https://vestbyens-cykelhandel.dk" style="margin: 1em; width: 200px" target="_blank" ><img src="img/sponsorer/vestbyen_Cykelhandel.PNG" title=""></a>
-    <a href="https://www.multiform.dk/butikker/aalborg" style="margin: 1em; width: 200px" target="_blank" ><img src="img/sponsorer/multiform.png" title=""></a>
-    <a href="https://www.antonsensgulvmontering.dk/" style="margin: 1em; width: 200px" target="_blank" >
-        <img src="img/sponsorer/Antonsens Gulvmontering.png" title="Antonsens Gulvmontering">
-    </a>
-    <a href="https://dmbolig.dk/" style="margin: 1em; width: 200px" target="_blank" >
-        <img src="img/sponsorer/dinmaegler.png" title="Din Mægler">
-    </a>
-    <a href="https://klitgaardure.dk/" style="margin: 1em; width: 200px" target="_blank" >
-        <img src="img/sponsorer/Klitgaard Ure.png" title="Klitgård Ure">
-    </a>    
+    <a href="https://www.3f.dk/aalborg" style="margin: 1em; width: 900px" target="_blank" ><img src="img/sponsorer/3F.png" title="3F Aalborg"></a>
+    <a href="https://www.sport24.dk/" style="margin: 1em; width: 400px" target="_blank" ><img src="img/sponsorer/Sport24.png" title="Sport24"></a>
+    <a href="https://www.hummel.dk/" style="margin: 1em; width: 400px" target="_blank" ><img src="img/sponsorer/HUMMEL.png" title="Hummel"></a>
+    <a href="https://www.multiform.dk/butikker/aalborg" style="margin: 1em; width: 400px" target="_blank" ><img src="img/sponsorer/multiform.png" title="multiform" style="width: 200px"></a>
+    <a href="https://www.ok.dk/privat/ok-og-sporten" style="margin: 1em; width: 400px" target="_blank" ><img src="img/sponsorer/OK.png" title="OK Benzin"></a>
 </div>
